fix: Minor projects spacing

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding: 20px;
+  padding: 20px 8%;
   font-family: "Plus Jakarta Sans", sans-serif;
   margin-top: 100px;
 }
@@ -14,8 +14,8 @@
 .projects-left-section,
 .projects-left-section-upper {
   flex: 1;
-  padding: 0 10% 0 1%;
-  max-width: 400px;
+  padding: 0 10% 0 0;
+  max-width: 490px;
   min-width: 320px;
 }
 
